# Financial-Data-Pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_add_llm_analysis_table.py
docker/: api.Dockerfile  consumer.Dockerfile  llm-analyzer.Dockerfile  processor.Dockerfile  producer.Dockerfile
infra/: alb.py  config.py  database.py  deploy.py  destroy.py  ecr.py  ecs.py  helpers.py  kafka.py  networking.py  secrets.py  storage.py
src/: config.py
src/api/: app.py  dependencies.py  schemas.py
src/api/routes/: aggregations.py  articles.py
src/consumer/: console_consumer.py  main.py
src/llm/: __init__.py  analyzer.py  main.py  prompts.py  provider.py  rate_limiter.py
src/models/: __init__.py  events.py
src/processor/: __init__.py  agents.py  app.py  enrichment.py  main.py
src/producer/: alpha_vantage_producer.py  base.py  fake_producer.py  main.py  sec_edgar_producer.py
src/storage/: database.py  db_sink.py  models.py  repository.py  s3_sink.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_alpha_vantage_producer.py  test_api.py  test_consumer_main.py  test_db_sink.py  test_enrichment.py  test_fake_producer.py  test_infra_alb.py  test_infra_config.py  test_infra_database.py  test_infra_deploy.py  test_infra_ecr.py  test_infra_ecs.py  test_infra_helpers.py  test_infra_kafka.py  test_infra_networking.py  test_infra_secrets.py  test_infra_storage.py  test_llm_analyzer.py  test_llm_provider.py  test_models.py  test_processor_agents.py  test_producer_main.py  test_s3_sink.py  test_sec_edgar_producer.py  test_storage_models.py
